src/test/resources/Parser/SyntaxErrors/ClassExtendedTwice.front
class A {}
class B : A, A {}